--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,15 +1,24 @@
 server:
-  port: 8081
+  port: 8088
 
 spring:
   application:
     name: SERVICE-CLIENT
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        service-name: SERVICE-CLIENT
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/clientservicedb?createDatabaseIfNotExist=true
-    username: "root"
-    password: ""
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
+  h2:
+    console:
+      enabled: true
