--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -5,9 +5,16 @@ spring:
   application:
     name: Gateway
   cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        service-name: Gateway
     discovery:
       enabled: true
 
-eureka:
-  instance:
-    hostname: localhost
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
